@@ -1,5 +1,6 @@
 ncmpc 0.50 - not yet released
 * lyrics/musixmatch: add new lyrics extension
+* lyrics/google: fix partial loading of lyrics
 
 ncmpc 0.49 - (2023-08-04)
 * fix UI freeze if lyrics plugin is stuck
